<resources>
    <string name="app_name">BoF</string>
    <string name="bofs">BoFs</string>
    <string name="start">START</string>
    <string name="input_mock_user">Input Mock User</string>
    <string name="enter">Enter</string>
    <string name="mock">MOCK</string>
    <string name="student_name">Student Name</string>
    <string name="studentheadshot">studentHeadshot</string>
    <string name="course_taking">Course Taking</string>
    <string name="courses">courses</string>
    <string name="common_courses">Common Courses</string>
    <string name="press_to_wave">press to wave</string>
    <string name="go_back">go back</string>
    <string name="sort_by_class_size">Sort By Class Size</string>
    <string name="sort_by_recency">Sort By Recency</string>
    <string name="session_name">Session name</string>
    <string name="xxxx_just_waved_you">xxxx just waved you</string>
    <string name="do_you_want_to_wave_back">Do you want to wave back</string>
    <string-array name="year">
    <item>2022</item>
    <item>2021</item>
    <item>2020</item>
    <item>2019</item>
    <item>2018</item>
    </string-array>
    <string-array name="quarter">
        <item>FA</item>
        <item>WI</item>
        <item>SP</item>
        <item>SS1</item>
        <item>SS2</item>
        <item>SSS</item>
    </string-array>
    <string-array name="course_size">
        <item>Tiny</item>
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>Huge</item>
        <item>Gigantic</item>
    </string-array>
</resources>